--- a/aboutme/index-2-minimal.html
+++ b/aboutme/index-2-minimal.html
@@ -448,9 +448,9 @@
 									<i class="fa fa-desktop"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Web Design</h3>
+									<h3>Connect your wearable device</h3>
 									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-								<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
+								<a class="btn btn-shutter-out-horizontal" href="single-service4.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
