--- a/aboutme/index-2-minimal.html
+++ b/aboutme/index-2-minimal.html
@@ -81,7 +81,7 @@
 								<div class="banner-content banner-content-fullwidth">
 									<h3></h3>
 									<h1 class="header-title-text type-animate">
-										<a href="" class="typewrite" data-period="2000" data-type='[ "Welcome to your Health detection and Wellbeing Managemnet Program", "Proffessional", "Creative Director", "From United States" ]'>
+										<a href="" class="typewrite" data-period="2000" data-type='[ "Welcome to your Health detection and Wellbeing Management Program", "Proffessional", "Creative Director", "From United States" ]'>
 										<span class="wrap"></span>
 										</a>&nbsp;
 									</h1>
@@ -400,9 +400,10 @@
 									<i class="fa fa-cogs"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Predict the Heart disease Risk Level</h3>
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-								<a class="btn btn-shutter-out-horizontal" href="single-service1.html">Read More</a>
+									<h3>Connect your wearable device and get Heart-rate</h3>
+									<p>This is the first step of your process to function with the mobile application. User has to connect the smart device using Bluetooth 
+									By getting the heart rate value, other functionalities will be perform accordingly.</p>
+								<a class="btn btn-shutter-out-horizontal" href="single-service4.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
@@ -416,9 +417,10 @@
 									<i class="fa fa-apple"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Provide Suitable Meal Plan</h3>
-									<p>User can capture the food image using mobile application. After that system use image classification and recognition techniques to identify the food image. Then display the average calorie volume of the food meal and provide the meal plan under three categories.</p>
-								<a class="btn btn-shutter-out-horizontal" href="single-service2.html">Read More</a>
+									<h3>Predict heart disease risk level</h3>
+									<p>In this section, user has to answer a questionnaire series to predict the user has a heart disease risk level or not. 
+										Questionnaire series is based on 14 questions concluding the behavours, family history, substance usage and etc.</p>
+								<a class="btn btn-shutter-out-horizontal" href="single-service1.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
@@ -432,9 +434,10 @@
 									<i class="fa fa-bolt"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Provide Sutable Exercise Plan</h3>
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-								<a class="btn btn-shutter-out-horizontal" href="single-service3.html">Read More</a>
+									<h3>Provide Sutable meal Plan</h3>
+									<p>The user can capture the food image using mobile application. After that system use image classification and recognition 
+										techniques to identify the food image. Then display the average calorie volume of the food meal and provide the meal plan under three categories.</p>
+									<a class="btn btn-shutter-out-horizontal" href="single-service2.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
@@ -448,9 +451,11 @@
 									<i class="fa fa-desktop"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Connect your wearable device</h3>
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-								<a class="btn btn-shutter-out-horizontal" href="single-service4.html">Read More</a>
+									<h3>Provide a suitable exercise plan</h3>
+									<p>By analyzing the user's bio data, this functionality is able to predict a better exercise schedule for the user. For the prediction user has to perform mainlyb three exercises
+										that system contained. After getting the results of the performed exercise details, the system will able to predict a suitable exercise schedule for the user.
+									</p>
+								<a class="btn btn-shutter-out-horizontal" href="single-service3.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
@@ -464,9 +469,9 @@
 									<i class="fa fa-camera"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Photography</h3>
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-								<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
+									<h3>Provide a suitable exercise plan</h3>
+									<p>By analyzing the user's bio data, this functionality is able to predict a better exercise schedule for the user. For the prediction user has to perform mainlyb three exercises
+										that system contained. After getting the results of the performed exercise details, the system will able to predict a suitable exercise schedule for the user.<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
