Support page modifications

--- a/aboutme/index-2-minimal.html
+++ b/aboutme/index-2-minimal.html
@@ -469,9 +469,10 @@
 									<i class="fa fa-camera"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Provide a suitable exercise plan</h3>
-									<p>By analyzing the user's bio data, this functionality is able to predict a better exercise schedule for the user. For the prediction user has to perform mainlyb three exercises
-										that system contained. After getting the results of the performed exercise details, the system will able to predict a suitable exercise schedule for the user.<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
+									<h3>Provide Daily Healthy Tips</h3>
+									<p>The system will provide a Daily healthy tips for you. To access this service you have to subscribe for the service. This service cost you Rs. 30.00 for a month. This service is optional. 
+										If you interested, please read more details by clicking read more option. This service included best practices to prevent from heart diseases and improve healthy tips of your life.</p>
+									<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
@@ -485,8 +486,10 @@
 									<i class="fa fa-umbrella"></i>
 								</div>
 								<div class="service-short-content-box">
-									<h3>Support</h3>
-									<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+									<h3>Support Service</h3>
+									<p>If you have any king of a probleam, please feel free to contact us without any hesitation. We have 24/7 support service in the workspace. We will try to provide our best service support to 
+										satisfy the customer requirement. So, if you have any suggestions or objections please contact us. <br><br>Thank you!
+									</p>
 								<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
