--- a/aboutme/index-2-minimal.html
+++ b/aboutme/index-2-minimal.html
@@ -187,12 +187,6 @@
 								</button>
 							</li>
 							<li>
-								<button data-toggle="tab" data-target="#tab2" aria-expanded="false">
-									<i class="fa fa-graduation-cap"></i>
-									<span class="tab-title text-bold">Education</span>
-								</button>
-							</li>
-							<li>
 								<button data-toggle="tab" data-target="#tab3" aria-expanded="false">
 									<i class="fa fa-trophy"></i>
 									<span class="tab-title text-bold">Award</span>
@@ -201,7 +195,7 @@
 							<li>
 								<button data-toggle="tab" data-target="#tab4" aria-expanded="false">
 									<i class="fa fa-diamond"></i>
-									<span class="tab-title text-bold">Skills</span>
+									<span class="tab-title text-bold">Used Technologies</span>
 								</button>
 							</li>
 						</ul>
@@ -337,7 +331,7 @@
 										<div class="progressbar" data-animate="false">
 											<div class="circle" data-percent="98.7" data-color="#04b962">
 												<div></div>
-												<p>HTML5</p>
+												<p>React Naltive</p>
 											</div><!-- end circle -->
 										</div><!-- end progressbar -->
 									</div><!-- end col -->
@@ -345,7 +339,7 @@
 										<div class="progressbar" data-animate="false">
 											<div class="circle" data-percent="95.8" data-color="#04b962">
 												<div></div>
-												<p>CSS3</p>
+												<p>machine Learning</p>
 											</div><!-- end circle -->
 										</div><!-- end progressbar -->
 									</div><!-- end col -->
@@ -353,7 +347,7 @@
 										<div class="progressbar" data-animate="false">
 											<div class="circle" data-percent="90.5" data-color="#04b962">
 												<div></div>
-												<p>PHP</p>
+												<p>Image Processing</p>
 											</div><!-- end circle -->
 										</div><!-- end progressbar -->
 									</div><!-- end col -->
@@ -361,7 +355,7 @@
 										<div class="progressbar" data-animate="false">
 											<div class="circle" data-percent="78.2" data-color="#04b962">
 												<div></div>
-												<p>Jquery</p>
+												<p>Cloud Services</p>
 											</div><!-- end circle -->
 										</div><!-- end progressbar -->
 									</div><!-- end col -->
@@ -490,7 +484,7 @@
 									<p>If you have any king of a probleam, please feel free to contact us without any hesitation. We have 24/7 support service in the workspace. We will try to provide our best service support to 
 										satisfy the customer requirement. So, if you have any suggestions or objections please contact us. <br><br>Thank you!
 									</p>
-								<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
+								<a class="btn btn-shutter-out-horizontal" href="single-service5.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
