Support page modifications

--- a/aboutme/single-service1.html
+++ b/aboutme/single-service1.html
@@ -65,12 +65,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Meal Plan </h2>
+					<h2>Heart Disease Risk Prediction </h2>
 				</div><!-- end col -->
 				<div class="col-sm-6">
 					<ul class="breadcrumb">
 						<li><a href="index.html">Home</a></li>
-						<li class="active">Meal Plan</li>
+						<li class="active">Risk predicttion</li>
 					</ul>
 				</div><!-- end col -->
 			</div><!-- end row -->
@@ -87,7 +87,7 @@
 						<img src="images/service/meal2.jpeg" alt="Graphic Design">
 					</div><!-- end post-image -->
 					<div class="title-box">
-						<h3 class="widget-title">Meal <strong>Plan</strong></h3>
+						<h3 class="widget-title">Heart Disease <strong>Risk Prediction</strong></h3>
 					</div><!-- end title-box -->
 					<div class="service-content">
 						<p>In recent years, healthy is the main topic that people concern. High-calorie amount of foods that affect human health and cause several diseases. The non-communicable diseases, coronary artery heart diseases have a high frequency of causing critical illnesses in the current society.</p>
