--- a/aboutme/index-2-minimal.html
+++ b/aboutme/index-2-minimal.html
@@ -1084,7 +1084,7 @@
 										<i class="fa fa-home"></i>
 									</div>
 									<div class="contact-desc">
-										<h4>70 Trent Rd, Luton LU3 1TA</h4>
+										<h4>No:46 - New Kandy Road, Malabe</h4>
 									</div>
 								</div><!-- end contact-item-inner -->
 							</div><!-- end contact-item -->
@@ -1096,7 +1096,7 @@
 										<i class="fa fa-envelope"></i>
 									</div>
 									<div class="contact-desc">
-										<h4><a href="mailto:sales@yourwebsite.com">sales@yourwebsite.com</a></h4>
+										<h4><a href="mailto:sales@yourwebsite.com">HealthyHeart@gmail.com</a></h4>
 									</div>
 								</div><!-- end contact-item-inner -->
 							</div><!-- end contact-item --> 
@@ -1108,7 +1108,7 @@
 										<i class="fa fa-phone"></i>
 									</div>
 									<div class="contact-desc">
-										<h4><a href="tel:000-0000-0000">+000 0000 0000</a></h4>
+										<h4><a href="tel:000-0000-0000">+94766706100</a></h4>
 									</div>
 								</div><!-- end contact-item-inner --> 
 							</div><!-- end contact-item --> 
@@ -1256,9 +1256,9 @@
 						<div class="columnbottom-margin contact-info-wrap">
 							<h4 class="widget-title">Contact <span>Details</span></h4>
 							<ul class="contact-info list-unstyled">
-								<li><i class="fa fa-home"></i> 70 Trent Rd, Luton LU3 1TA, UK</li>
-								<li><i class="fa fa-phone"></i> <a href="tel:000-0000-0000">000 0000 0000</a></li>
-								<li><i class="fa fa-envelope"></i> <a href="mailto:sales@yourwebsite.com">sales@yourwebsite.com</a></li>
+								<li><i class="fa fa-home"></i>No:46 - New Kandy Road, Malabe</li>
+								<li><i class="fa fa-phone"></i> <a href="tel:000-0000-0000">+94766706100</a></li>
+								<li><i class="fa fa-envelope"></i> <a href="mailto:sales@yourwebsite.com">HealthyHeart@gmail.com</a></li>
 							</ul><!-- end contact-info  -->
 							
 							<ul class="list-inline list-social clearfix">
@@ -1307,7 +1307,7 @@
 			<div class="row">					
 				<div class="col-sm-12">
 					<a href="#" class="footer-logo-link"><img class="footer-logo" src="images/footer-logo.png" alt="Steve"></a>
-					<p class="text-center copyright">&copy; 2019 <a href="https://1.envato.market/kPy00" class="footer-site-link">MGScoder</a> All rights reserved. <a href="https://1.envato.market/7B3dY" class="footer-site-link">Buy AboutMe HTML Template</a></p>
+					<p class="text-center copyright">&copy; 2020 <a href="https://1.envato.market/kPy00" class="footer-site-link">Healthy Heart --</a> All rights reserved. <a href="https://1.envato.market/7B3dY" class="footer-site-link"></a></p>
 				</div><!-- end col --> 
 			</div><!-- end row --> 
 		</div><!-- end container --> 
